syntax = "proto3";

package transactionsender;

option go_package = "./proto_generated/transactions_sender";

import "cards_service.proto";
import "google/api/annotations.proto";


service TransactionService {
    rpc CreateTransaction(CreateTransactionRequest) returns (CreateTransactionResponse) {
    option (google.api.http) = {
      post: "/grpc-gateway/send_transaction"
      body: "*"
    };
  }
}

message CreateTransactionRequest {
    string user_id = 1;
    string card_number = 2;
    double amount = 3;
    string recipient_card_number = 4;
}

message CreateTransactionResponse {
    bool is_created = 1;
    string message = 2; 
}